Implements JSON Web Token with asymmetric keys

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 PORT=9000
 
+DB_TYPE=mysqlx
 DB_HOST=localhost
+DB_PORT=33060
 DB_NAME="bcaf12-point-of-sales"
 DB_USERNAME=root
 DB_PASSWORD=
+
+USE_JWT=true
+PRIVATE_KEY_PATH="keys/id_rsa"
+PUBLIC_KEY_PATH="keys/id_rsa.pub"
