--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
 		"format": "prettier src/**/*.ts --config .prettierrc --write",
 		"dev": "DEBUG=bcaf12-point-of-sales:* babel-node src/app.ts --extensions '.ts'",
 		"dev:watch": "nodemon --exec npm run dev --ext 'ts'",
-		"build": "babel src -d lib --extensions '.ts'",
+		"build": "rimraf lib && babel src -d lib --extensions '.ts'",
 		"start": "DEBUG=bcaf12-point-of-sales:* node lib/app.js",
-		"test": "echo \"Test is omitted for now.\" && exit 1"
+		"test": "mocha -r ts-node/register test/**/*.test.ts"
 	},
 	"dependencies": {
 		"@babel/polyfill": "^7.6.0",
+		"bcrypt": "^3.0.6",
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"debug": "^4.1.1",
 		"dotenv": "^8.1.0",
 		"express": "^4.17.1",
+		"express-jwt": "^5.3.1",
+		"helmet": "^3.21.1",
+		"jsonwebtoken": "^8.5.1",
+		"lodash.isboolean": "^3.0.3",
+		"lodash.isnumber": "^3.0.3",
 		"lodash.isstring": "^4.0.1",
 		"morgan": "^1.9.1",
+		"mysqlx": "^1.1.0",
 		"promise-mysql": "^4.1.1",
 		"short-uuid": "^3.1.1",
 		"stacktrace-js": "^2.0.1",
@@ -37,18 +44,31 @@
 		"@babel/plugin-proposal-object-rest-spread": "^7.6.2",
 		"@babel/preset-env": "^7.6.3",
 		"@babel/preset-typescript": "^7.6.0",
+		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.17.1",
+		"@types/chai": "^4.2.3",
 		"@types/cors": "^2.8.6",
 		"@types/debug": "^4.1.5",
 		"@types/dotenv": "^6.1.1",
 		"@types/express": "^4.17.1",
+		"@types/express-jwt": "^0.0.42",
+		"@types/helmet": "^0.0.44",
+		"@types/jsonwebtoken": "^8.3.5",
+		"@types/lodash.isboolean": "^3.0.6",
+		"@types/lodash.isnumber": "^3.0.6",
 		"@types/lodash.isstring": "^4.0.6",
+		"@types/mocha": "^5.2.7",
 		"@types/morgan": "^1.7.37",
 		"@types/node": "^12.7.12",
 		"@types/stacktrace-js": "^0.0.32",
+		"@types/supertest": "^2.0.8",
 		"@types/uuid": "^3.4.5",
+		"chai": "^4.2.0",
+		"mocha": "^6.2.1",
 		"nodemon": "^1.19.3",
 		"prettier": "^1.18.2",
+		"rimraf": "^3.0.0",
+		"supertest": "^4.0.2",
 		"ts-node": "^8.4.1",
 		"typescript": "^3.6.4"
 	}
