--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,6 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 USE_JWT=true
-PRIVATE_KEY_PATH="keys/id_rsa"
-PUBLIC_KEY_PATH="keys/id_rsa.pub"
+JWT_SECRET_KEY=
+#PRIVATE_KEY_PATH="keys/id_rsa"
+#PUBLIC_KEY_PATH="keys/id_rsa.pub"
