--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"express-jwt": "^5.3.1",
 		"helmet": "^3.21.1",
 		"jsonwebtoken": "^8.5.1",
+		"lodash.clone": "^4.5.0",
 		"lodash.isboolean": "^3.0.3",
 		"lodash.isnumber": "^3.0.3",
 		"lodash.isstring": "^4.0.1",
@@ -54,6 +55,7 @@
 		"@types/express-jwt": "^0.0.42",
 		"@types/helmet": "^0.0.44",
 		"@types/jsonwebtoken": "^8.3.5",
+		"@types/lodash.clone": "^4.5.6",
 		"@types/lodash.isboolean": "^3.0.6",
 		"@types/lodash.isnumber": "^3.0.6",
 		"@types/lodash.isstring": "^4.0.6",
