--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 USE_JWT=true
+# Chose one between secret key or public/private keys
 JWT_SECRET_KEY=
-#PRIVATE_KEY_PATH="keys/id_rsa"
-#PUBLIC_KEY_PATH="keys/id_rsa.pub"
+PRIVATE_KEY_PATH="keys/jwt-rs256.key"
+PUBLIC_KEY_PATH="keys/jwt-rs256.key.pub"
