Update: Use TSEd framework
Replacing the old framework using TypeScript Decorator framework

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,15 @@
-PORT=9000
+# Server Configurations
+ADDRESS=127.0.0.1
+PORT=45010
 
-DB_TYPE=mysqlx
+# Database Configuration
+DB_TYPE=mysql
 DB_HOST=localhost
-DB_PORT=33060
-DB_NAME="bcaf12-point-of-sales"
-DB_USERNAME=root
+DB_PORT=3306
+DB_NAME=mycashier
+DB_USERNAME=mycashier
 DB_PASSWORD=
 
-USE_JWT=true
-# Chose one between secret key or public/private keys
-JWT_SECRET_KEY=
-PRIVATE_KEY_PATH="keys/jwt-rs256.key"
-PUBLIC_KEY_PATH="keys/jwt-rs256.key.pub"
+# Passport Configuration
+AUTH_STRATEGY=jwt
+AUTH_JWT_SECRET=
