--- a/backend/package.json
+++ b/backend/package.json
@@ -1,71 +1,69 @@
 {
-	"name": "my-cashier-backend",
+	"name": "mycashier-backend",
 	"version": "1.0.0",
 	"description": "A full stack intuitive point of sales application. This package is the back-end.",
-	"main": "lib/app.js",
-	"repository": "https://gitlab.com/danang-id/bcaf12-point-of-sales",
+	"main": "lib/bootstrap",
+	"repository": "https://gitlab.com/danang-id/MyCashier.git",
 	"author": "Danang Galuh Tegar Prasetyo <danang.galuh.t@gmail.com> (https://gitlab.com/danang-id)",
 	"license": "Apache-2.0",
 	"private": true,
 	"scripts": {
 		"format": "prettier src/**/*.ts --config .prettierrc --write",
-		"dev": "DEBUG=my-cashier-backend:* babel-node src/app.ts --extensions '.ts'",
+		"dev": "ts-node src/bootstrap",
 		"dev:watch": "nodemon --exec npm run dev --ext 'ts'",
-		"build": "rimraf lib && babel src -d lib --extensions '.ts'",
-		"start": "DEBUG=my-cashier-backend:* node lib/app.js",
+		"build": "rimraf lib && tsc",
+		"start": "node lib/bootstrap",
 		"test": "mocha -r ts-node/register test/**/*.test.ts"
 	},
 	"dependencies": {
-		"@babel/polyfill": "^7.6.0",
+		"@tsed/ajv": "^5.32.2",
+		"@tsed/common": "^5.32.2",
+		"@tsed/core": "^5.32.2",
+		"@tsed/di": "^5.32.2",
+		"@tsed/multipartfiles": "^5.32.2",
+		"@tsed/swagger": "^5.32.2",
+		"@tsed/typeorm": "^5.32.2",
+		"ajv": "^6.10.2",
 		"bcrypt": "^3.0.6",
 		"body-parser": "^1.19.0",
-		"cors": "^2.8.5",
-		"debug": "^4.1.1",
-		"dotenv": "^8.1.0",
+		"compression": "^1.7.4",
+		"consolidate": "^0.15.1",
+		"cookie-parser": "^1.4.4",
+		"dotenv": "^8.2.0",
+		"ejs": "^2.7.1",
 		"express": "^4.17.1",
-		"helmet": "^3.21.1",
+		"express-favicon": "^2.0.1",
+		"express-rate-limit": "^5.0.0",
+		"helmet": "^3.21.2",
 		"jsonwebtoken": "^8.5.1",
-		"lodash.clone": "^4.5.0",
-		"lodash.isboolean": "^3.0.3",
-		"lodash.isnumber": "^3.0.3",
-		"lodash.isstring": "^4.0.1",
-		"morgan": "^1.9.1",
-		"mysqlx": "^1.1.0",
-		"promise-mysql": "^4.1.1",
-		"short-uuid": "^3.1.1",
-		"stacktrace-js": "^2.0.1",
+		"method-override": "^3.0.0",
+		"multer": "^1.4.2",
+		"mysql": "^2.17.1",
+		"ts-httpexceptions": "^4.1.0",
+		"typeorm": "^0.2.20",
 		"uuid": "^3.3.3"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.6.4",
-		"@babel/core": "^7.6.4",
-		"@babel/node": "^7.6.3",
-		"@babel/plugin-proposal-class-properties": "^7.5.5",
-		"@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-		"@babel/preset-env": "^7.6.3",
-		"@babel/preset-typescript": "^7.6.0",
 		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.17.1",
-		"@types/chai": "^4.2.3",
-		"@types/cors": "^2.8.6",
-		"@types/debug": "^4.1.5",
+		"@types/chai": "^4.2.4",
+		"@types/compression": "^1.0.1",
+		"@types/consolidate": "^0.14.0",
+		"@types/cookie-parser": "^1.4.2",
 		"@types/dotenv": "^6.1.1",
 		"@types/express": "^4.17.1",
+		"@types/express-rate-limit": "^3.3.3",
 		"@types/helmet": "^0.0.44",
 		"@types/jsonwebtoken": "^8.3.5",
-		"@types/lodash.clone": "^4.5.6",
-		"@types/lodash.isboolean": "^3.0.6",
-		"@types/lodash.isnumber": "^3.0.6",
-		"@types/lodash.isstring": "^4.0.6",
+		"@types/method-override": "^0.0.31",
 		"@types/mocha": "^5.2.7",
-		"@types/morgan": "^1.7.37",
-		"@types/node": "^12.7.12",
-		"@types/stacktrace-js": "^0.0.32",
+		"@types/multer": "^1.3.10",
+		"@types/node": "^12.11.5",
 		"@types/supertest": "^2.0.8",
 		"@types/uuid": "^3.4.5",
 		"chai": "^4.2.0",
-		"mocha": "^6.2.1",
-		"nodemon": "^1.19.3",
+		"mocha": "^6.2.2",
+		"nodemon": "^1.19.4",
 		"prettier": "^1.18.2",
 		"rimraf": "^3.0.0",
 		"supertest": "^4.0.2",
