--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -3,7 +3,7 @@
 	"tabWidth": 4,
 	"useTabs": true,
 	"semi": true,
-	"singleQuote": false,
+	"singleQuote": true,
 	"trailingComma": "es5",
 	"bracketSpacing": true,
 	"arrowParens": "always",
