--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,16 +1,22 @@
 {
 	"compilerOptions": {
-		"target": "esnext",
+		"target": "es2016",
+		"lib": ["es2016"],
+		"typeRoots": [
+			"./node_modules/@types"
+		],
 		"module": "commonjs",
 		"moduleResolution": "node",
-		"allowJs": true,
-		"noEmit": true,
-		"strict": true,
-		"isolatedModules": true,
+		"experimentalDecorators":true,
+		"emitDecoratorMetadata": true,
+		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
-		"resolveJsonModule": true
+		"outDir": "lib"
 	},
 	"include": [
 		"src"
+	],
+	"exclude": [
+		"node_modules"
 	]
 }
