--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
 		"method-override": "^3.0.0",
 		"multer": "^1.4.2",
 		"mysql": "^2.17.1",
+		"swagger-schema-official": "^2.0.0-bab6bed",
 		"ts-httpexceptions": "^4.1.0",
 		"typeorm": "^0.2.20",
 		"uuid": "^3.3.3"
@@ -60,6 +61,7 @@
 		"@types/multer": "^1.3.10",
 		"@types/node": "^12.11.5",
 		"@types/supertest": "^2.0.8",
+		"@types/swagger-schema-official": "^2.0.19",
 		"@types/uuid": "^3.4.5",
 		"chai": "^4.2.0",
 		"mocha": "^6.2.2",
