--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
 		"test": "mocha -r ts-node/register test/**/*.test.ts"
 	},
 	"dependencies": {
+		"@sendgrid/mail": "^6.4.0",
 		"@tsed/ajv": "^5.32.2",
 		"@tsed/common": "^5.32.2",
 		"@tsed/core": "^5.32.2",
