--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,14 @@ DB_NAME=mycashier
 DB_USERNAME=mycashier
 DB_PASSWORD=
 
+# In Memory Configuration
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+
+# Session Configuration
+SESSION_NAME=
+SESSION_SECRET=
+
 # Passport Configuration
 AUTH_STRATEGY=jwt
 AUTH_JWT_SECRET=
