--- a/backend/package.json
+++ b/backend/package.json
@@ -24,22 +24,28 @@
 		"@tsed/multipartfiles": "^5.32.2",
 		"@tsed/swagger": "^5.32.2",
 		"@tsed/typeorm": "^5.32.2",
+		"@types/connect-redis": "^0.0.11",
+		"@types/redis": "^2.8.14",
 		"ajv": "^6.10.2",
 		"bcrypt": "^3.0.6",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
+		"connect-redis": "^4.0.3",
 		"consolidate": "^0.15.1",
 		"cookie-parser": "^1.4.4",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"ejs": "^2.7.1",
 		"express": "^4.17.1",
 		"express-favicon": "^2.0.1",
 		"express-rate-limit": "^5.0.0",
+		"express-session": "^1.17.0",
 		"helmet": "^3.21.2",
 		"jsonwebtoken": "^8.5.1",
 		"method-override": "^3.0.0",
 		"multer": "^1.4.2",
 		"mysql": "^2.17.1",
+		"redis": "^2.8.0",
 		"swagger-schema-official": "^2.0.0-bab6bed",
 		"ts-httpexceptions": "^4.1.0",
 		"typeorm": "^0.2.20",
@@ -52,9 +58,11 @@
 		"@types/compression": "^1.0.1",
 		"@types/consolidate": "^0.14.0",
 		"@types/cookie-parser": "^1.4.2",
+		"@types/cors": "^2.8.6",
 		"@types/dotenv": "^6.1.1",
 		"@types/express": "^4.17.1",
 		"@types/express-rate-limit": "^3.3.3",
+		"@types/express-session": "^1.15.15",
 		"@types/helmet": "^0.0.44",
 		"@types/jsonwebtoken": "^8.3.5",
 		"@types/method-override": "^0.0.31",
