--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -1,7 +1,6 @@
 {
-  "name": "MyCashier",
-  "short_name": "MyCashier",
-  "description": "A full stack intuitive point of sales application.",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
@@ -9,14 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
-      "src": "android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
