--- a/backend/package.json
+++ b/backend/package.json
@@ -33,13 +33,13 @@
 		"connect-redis": "^4.0.3",
 		"consolidate": "^0.15.1",
 		"cookie-parser": "^1.4.4",
+		"cookie-session": "^1.3.3",
 		"cookies-parser": "^1.2.0",
 		"dotenv": "^8.2.0",
 		"ejs": "^2.7.1",
 		"express": "^4.17.1",
 		"express-favicon": "^2.0.1",
 		"express-rate-limit": "^5.0.0",
-		"express-session": "^1.17.0",
 		"helmet": "^3.21.2",
 		"jsonwebtoken": "^8.5.1",
 		"method-override": "^3.0.0",
@@ -58,10 +58,10 @@
 		"@types/compression": "^1.0.1",
 		"@types/consolidate": "^0.14.0",
 		"@types/cookie-parser": "^1.4.2",
+		"@types/cookie-session": "^2.0.37",
 		"@types/dotenv": "^6.1.1",
 		"@types/express": "^4.17.1",
 		"@types/express-rate-limit": "^3.3.3",
-		"@types/express-session": "^1.15.15",
 		"@types/helmet": "^0.0.44",
 		"@types/jsonwebtoken": "^8.3.5",
 		"@types/method-override": "^0.0.31",
