--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
 		"express": "^4.17.1",
 		"express-favicon": "^2.0.1",
 		"express-rate-limit": "^5.0.0",
+		"express-session": "^1.17.0",
 		"helmet": "^3.21.2",
 		"jsonwebtoken": "^8.5.1",
 		"method-override": "^3.0.0",
@@ -62,6 +63,7 @@
 		"@types/dotenv": "^6.1.1",
 		"@types/express": "^4.17.1",
 		"@types/express-rate-limit": "^3.3.3",
+		"@types/express-session": "^1.15.15",
 		"@types/helmet": "^0.0.44",
 		"@types/jsonwebtoken": "^8.3.5",
 		"@types/method-override": "^0.0.31",
