--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
 		"dev:watch": "nodemon --exec npm run dev --ext 'ts'",
 		"build": "rimraf lib && tsc",
 		"start": "node lib/bootstrap",
-		"test": "mocha -r ts-node/register test/**/*.test.ts"
+		"test": "mocha -r ts-node/register test/**/*.test.ts",
+		"generate:certificate": "openssl req -nodes -new -x509 -keyout keys/server.key -out keys/server.cert"
 	},
 	"dependencies": {
 		"@sendgrid/mail": "^6.4.0",
