--- a/web/.env
+++ b/web/.env
@@ -1,4 +1,6 @@
 PORT=45020
+#HTTPS=true
 
+#REACT_APP_API_BASE_URL='http://localhost:45010/'
 REACT_APP_API_BASE_URL='https://api.mycashier.pw/'
 REACT_APP_API_VERSION=v1
