--- a/web/package.json
+++ b/web/package.json
@@ -3,20 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.5.1",
+    "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
-    "axios": "^0.19.0",
+    "@types/jest": "24.0.20",
+    "@types/node": "12.11.7",
+    "@types/prop-types": "^15.7.3",
+    "@types/query-string": "^6.3.0",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.3",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.7",
+    "@types/redux-promise-middleware": "^0.0.11",
+    "axios": "^0.19.0-beta.1",
     "clsx": "^1.0.4",
+    "localforage": "^1.7.3",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
     "react": "^16.11.0",
-    "react-cookie": "^4.0.1",
     "react-dom": "^16.11.0",
     "react-number-format": "^4.3.1",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "recharts": "^1.8.5",
-    "universal-cookie": "^4.0.2"
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.1",
+    "typescript": "3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
