--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,8 @@
 # Server Configurations
 ADDRESS=127.0.0.1
-PORT=45010
-PRODUCTION_URL=localhost:45010
+PORT=45020
+PRODUCTION_URL=localhost:45020
+HTTPS_ENABLE=false
 
 # Database Configuration
 DB_TYPE=mysql
@@ -12,6 +13,7 @@ DB_USERNAME=mycashier
 DB_PASSWORD=
 
 # In Memory Configuration
+REDIS_ENABLE=false
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 
@@ -23,4 +25,5 @@ AUTH_STRATEGY=jwt
 AUTH_JWT_SECRET=
 
 # Mail Configuration
+SENDGRID_ENABLE=false
 SENDGRID_API_KEY=
