--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"description": "A full stack intuitive point of sales application. This package is the back-end.",
 	"main": "lib/bootstrap",
-	"repository": "https://gitlab.com/danang-id/MyCashier.git",
-	"author": "Danang Galuh Tegar Prasetyo <danang.galuh.t@gmail.com> (https://gitlab.com/danang-id)",
+	"repository": "https://github.com/danang-id/myCashier.git",
+	"author": "Danang Galuh Tegar Prasetyo <connect@danang.id> (https://danang.id)",
 	"license": "Apache-2.0",
 	"private": true,
 	"scripts": {
@@ -17,70 +17,70 @@
 		"generate:certificate": "openssl req -nodes -new -x509 -keyout keys/server.key -out keys/server.cert"
 	},
 	"dependencies": {
-		"@sendgrid/mail": "^6.4.0",
-		"@tsed/ajv": "^5.32.2",
-		"@tsed/common": "^5.32.2",
-		"@tsed/core": "^5.32.2",
-		"@tsed/di": "^5.32.2",
-		"@tsed/multipartfiles": "^5.32.2",
-		"@tsed/swagger": "^5.32.2",
-		"@tsed/typeorm": "^5.32.2",
-		"@types/connect-redis": "^0.0.11",
-		"@types/redis": "^2.8.14",
-		"ajv": "^6.10.2",
-		"bcrypt": "^3.0.6",
+		"@sendgrid/mail": "^7.2.2",
+		"@tsed/ajv": "^5.61.1",
+		"@tsed/common": "^5.61.1",
+		"@tsed/core": "^5.61.1",
+		"@tsed/di": "^5.61.1",
+		"@tsed/multipartfiles": "^5.61.1",
+		"@tsed/platform-express": "^5.61.1",
+		"@tsed/swagger": "^5.61.1",
+		"@tsed/typeorm": "^5.61.1",
+		"@types/connect-redis": "^0.0.14",
+		"@types/redis": "^2.8.25",
+		"ajv": "^6.12.3",
+		"bcrypt": "^5.0.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
-		"connect-redis": "^4.0.3",
+		"connect-redis": "^5.0.0",
 		"consolidate": "^0.15.1",
-		"cookie-parser": "^1.4.4",
-		"cookie-session": "^1.3.3",
+		"cookie-parser": "^1.4.5",
+		"cookie-session": "^1.4.0",
 		"cookies-parser": "^1.2.0",
 		"dotenv": "^8.2.0",
-		"ejs": "^2.7.1",
+		"ejs": "^3.1.3",
 		"express": "^4.17.1",
 		"express-favicon": "^2.0.1",
-		"express-rate-limit": "^5.0.0",
-		"express-session": "^1.17.0",
-		"helmet": "^3.21.2",
+		"express-rate-limit": "^5.1.3",
+		"express-session": "^1.17.1",
+		"helmet": "^3.23.3",
 		"jsonwebtoken": "^8.5.1",
 		"method-override": "^3.0.0",
 		"multer": "^1.4.2",
-		"mysql": "^2.17.1",
-		"redis": "^2.8.0",
+		"mysql": "^2.18.1",
+		"redis": "^3.0.2",
 		"swagger-schema-official": "^2.0.0-bab6bed",
 		"ts-httpexceptions": "^4.1.0",
-		"typeorm": "^0.2.20",
-		"uuid": "^3.3.3"
+		"typeorm": "^0.2.25",
+		"uuid": "^8.2.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^3.0.0",
-		"@types/body-parser": "^1.17.1",
-		"@types/chai": "^4.2.4",
-		"@types/compression": "^1.0.1",
+		"@types/body-parser": "^1.19.0",
+		"@types/chai": "^4.2.12",
+		"@types/compression": "^1.7.0",
 		"@types/consolidate": "^0.14.0",
 		"@types/cookie-parser": "^1.4.2",
-		"@types/cookie-session": "^2.0.37",
-		"@types/dotenv": "^6.1.1",
-		"@types/express": "^4.17.1",
-		"@types/express-rate-limit": "^3.3.3",
-		"@types/express-session": "^1.15.15",
-		"@types/helmet": "^0.0.44",
-		"@types/jsonwebtoken": "^8.3.5",
+		"@types/cookie-session": "^2.0.41",
+		"@types/express": "^4.17.7",
+		"@types/express-rate-limit": "^5.0.0",
+		"@types/express-session": "^1.17.0",
+		"@types/helmet": "^0.0.47",
+		"@types/jsonwebtoken": "^8.5.0",
 		"@types/method-override": "^0.0.31",
-		"@types/mocha": "^5.2.7",
-		"@types/multer": "^1.3.10",
-		"@types/node": "^12.11.5",
-		"@types/supertest": "^2.0.8",
-		"@types/swagger-schema-official": "^2.0.19",
-		"@types/uuid": "^3.4.5",
+		"@types/mocha": "^8.0.0",
+		"@types/multer": "^1.4.3",
+		"@types/node": "^14.0.26",
+		"@types/supertest": "^2.0.10",
+		"@types/swagger-schema-official": "^2.0.21",
+		"@types/uuid": "^8.0.0",
 		"chai": "^4.2.0",
-		"mocha": "^6.2.2",
-		"nodemon": "^1.19.4",
-		"prettier": "^1.18.2",
-		"rimraf": "^3.0.0",
+		"mocha": "^8.0.1",
+		"nodemon": "^2.0.4",
+		"prettier": "^2.0.5",
+		"rimraf": "^3.0.2",
 		"supertest": "^4.0.2",
-		"ts-node": "^8.4.1",
-		"typescript": "^3.6.4"
+		"ts-node": "^8.10.2",
+		"typescript": "^3.9.7"
 	}
 }
