Fix HTTPS and Update Style

--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -2,8 +2,8 @@
 	"printWidth": 120,
 	"tabWidth": 4,
 	"useTabs": true,
-	"semi": true,
-	"singleQuote": true,
+	"semi": false,
+	"singleQuote": false,
 	"trailingComma": "es5",
 	"bracketSpacing": true,
 	"arrowParens": "always",
