--- a/web/.env
+++ b/web/.env
@@ -1,6 +1,5 @@
-PORT=45020
-#HTTPS=true
+PORT=45030
+# HTTPS=true
 
-#REACT_APP_API_BASE_URL='http://localhost:45010/'
-REACT_APP_API_BASE_URL='https://api.mycashier.pw/'
+REACT_APP_API_BASE_URL='https://mycashier.danang.id/'
 REACT_APP_API_VERSION=v1
