--- a/web/package.json
+++ b/web/package.json
@@ -1,39 +1,40 @@
 {
   "name": "mycashier-web",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "A full stack intuitive point of sales application. This package is the Web front-end.",
+  "repository": "https://github.com/danang-id/myCashier.git",
+  "author": "Danang Galuh Tegar Prasetyo <connect@danang.id> (https://danang.id)",
+  "license": "Apache-2.0",
+  "private": false,
   "dependencies": {
-    "@material-ui/core": "^4.5.2",
-    "@material-ui/icons": "^4.5.1",
-    "@types/jest": "24.0.20",
-    "@types/node": "12.11.7",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@types/jest": "26.0.7",
+    "@types/node": "14.0.26",
     "@types/prop-types": "^15.7.3",
-    "@types/query-string": "^6.3.0",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.3",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/redux": "^3.6.0",
-    "@types/redux-logger": "^3.0.7",
-    "@types/redux-promise-middleware": "^0.0.11",
-    "axios": "^0.19.0-beta.1",
-    "clsx": "^1.0.4",
-    "localforage": "^1.7.3",
-    "node-sass": "^4.13.0",
+    "@types/react": "16.9.43",
+    "@types/react-dom": "16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/redux-logger": "^3.0.8",
+    "axios": "^0.19.2",
+    "clsx": "^1.1.1",
+    "localforage": "^1.8.1",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "query-string": "^6.8.3",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-number-format": "^4.3.1",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
+    "query-string": "^6.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-number-format": "^4.4.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-promise-middleware": "^6.1.1",
-    "typescript": "3.6.4"
+    "redux-promise-middleware": "^6.1.2",
+    "typescript": "3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
